Ajout de la référence sur Channelflow, correction des commandes de compilation, depuis de la partie sur l'implémentation

--- a/biblio_stage_L3.bib
+++ b/biblio_stage_L3.bib
@@ -18,3 +18,22 @@
 	year = {2005}
 }
 
+@article{GibsonHalcrowCvitanovicJFM08,
+	author = {Gibson, J. F. and Halcrow, J. and Cvitanovi\'{c}, P.},
+	journal = {J.\ Fluid Mech.},
+	note = {{\tt arXiv:0705.3957}},
+	pages = {107--130},
+	title = {{Visualizing the geometry of state space in plane {Couette} flow}},
+	volume = {611},
+	year = {2008}
+}
+
+@techreport{channelflow,
+	author = {Gibson, J. F.},
+	institution = {U. New Hampshire},
+	note = {{\tt {Channelflow.org}}},
+	publisher = {J. F. Gibson},
+	title = {{{Channelflow}: {A} spectral {Navier-Stokes} simulator in {C}++}},
+	year = {2014}
+}
+
